--- a/styles/db-theme/pages/_page--merch-store.scss
+++ b/styles/db-theme/pages/_page--merch-store.scss
@@ -1,305 +1,307 @@
-.db-section--merch-store {
-  padding: 225px 30px 215px;
+.db-page--merch-store {
+  .db-section--merch-store-listing {
+    padding: 225px 30px 215px;
 
-  @media only screen and (max-width: 768px) {
-    padding: 175px 30px 60px;
-  }
+    @media only screen and (max-width: 768px) {
+      padding: 175px 30px 60px;
+    }
 
-  @media only screen and (max-width: 480px) {
-    padding: 160px 30px 50px;
-  }
+    @media only screen and (max-width: 480px) {
+      padding: 160px 30px 50px;
+    }
 
-  .db-container {
-    .db-row {
-      .db-col {
-        &:nth-of-type(1) {
-          width: unset;
-        }
+    .db-container {
+      .db-row {
+        .db-col {
+          &:nth-of-type(1) {
+            width: unset;
+          }
 
-        &:nth-of-type(2) {
-          .product-list {
-            display: grid;
-            grid-template-columns: repeat(4, minmax(300px, 1fr));
-            justify-content: center;
-            align-items: stretch;
-            grid-gap: 50px 40px;
-            gap: 50px 40px;
-            margin-bottom: 90px;
+          &:nth-of-type(2) {
+            .product-list {
+              display: grid;
+              grid-template-columns: repeat(4, minmax(300px, 1fr));
+              justify-content: center;
+              align-items: stretch;
+              grid-gap: 50px 40px;
+              gap: 50px 40px;
+              margin-bottom: 90px;
 
-            @media only screen and (max-width: 1440px) {
-              grid-template-columns: repeat(4, minmax(250px, 1fr));
-              grid-gap: 40px 30px;
-              gap: 40px 30px;
-            }
+              @media only screen and (max-width: 1440px) {
+                grid-template-columns: repeat(4, minmax(250px, 1fr));
+                grid-gap: 40px 30px;
+                gap: 40px 30px;
+              }
 
-            @media only screen and (max-width: 1200px) {
-              grid-template-columns: repeat(3, minmax(200px, 1fr));
-            }
+              @media only screen and (max-width: 1200px) {
+                grid-template-columns: repeat(3, minmax(200px, 1fr));
+              }
 
-            @media only screen and (max-width: 768px) {
-              grid-template-columns: repeat(2, minmax(200px, 1fr));
-              grid-gap: 50px 30px;
-              gap: 50px 30px;
-              margin-bottom: 80px;
-            }
+              @media only screen and (max-width: 768px) {
+                grid-template-columns: repeat(2, minmax(200px, 1fr));
+                grid-gap: 50px 30px;
+                gap: 50px 30px;
+                margin-bottom: 80px;
+              }
 
-            @media only screen and (max-width: 480px) {
-              grid-template-columns: repeat(2, minmax(144px, 1fr));
-              grid-gap: 20px 15px;
-              gap: 20px 15px;
-              margin-bottom: 40px;
-            }
+              @media only screen and (max-width: 480px) {
+                grid-template-columns: repeat(2, minmax(144px, 1fr));
+                grid-gap: 20px 15px;
+                gap: 20px 15px;
+                margin-bottom: 40px;
+              }
 
-            .product-item {
-              position: relative;
-              opacity: 0;
-              transition:
-                opacity 0ms ease-in-out 0ms;
-              cursor: pointer;
-              
-              .product-img-link {
-                display: block;
-                width: 100%;
-                height: 370px;
-                margin: 0 auto 24px;
-
-                @media only screen and (max-width: 1440px) {
-                  height: 270px;
-                }
-
-                @media only screen and (max-width: 768px) {
-                  margin: 0 auto 17px;
-                }
-
-                @media only screen and (max-width: 480px) {
-                  height: 160px;
-                  margin: 0 auto 7px;
-                }
-
-                .product-img {
+              .product-item {
+                position: relative;
+                opacity: 0;
+                transition:
+                  opacity 0ms ease-in-out 0ms;
+                cursor: pointer;
+                
+                .product-img-link {
                   display: block;
                   width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  object-position: center;
-                }
-              }
+                  height: 370px;
+                  margin: 0 auto 24px;
 
-              .product-details {
-                position: relative;
-                z-index: 1;
-                visibility: visible;
-                opacity: 1;
-                height: 60px;
-                transition:
-                  opacity $hover-transition-duration ease-in-out 0ms;
+                  @media only screen and (max-width: 1440px) {
+                    height: 270px;
+                  }
 
-                @media only screen and (max-width: 768px) {
-                  height: auto;
-                  margin: 0 auto 16px;
-                }
-
-                @media only screen and (max-width: 480px) {
-                  margin-bottom: 7px;
-                }
-
-                .product-title {
-                  color: $white-color;
-                  font-family: $primary-font-family;
-                  font-size: 20px;
-                  font-style: normal;
-                  font-weight: 500;
-                  line-height: 1.25em;
-                  margin-bottom: 8px;
+                  @media only screen and (max-width: 768px) {
+                    margin: 0 auto 17px;
+                  }
 
                   @media only screen and (max-width: 480px) {
-                    font-size: 10px;
-                    margin-bottom: 5px;
+                    height: 160px;
+                    margin: 0 auto 7px;
+                  }
+
+                  .product-img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
                   }
                 }
 
-                .product-price {
-                  display: flex;
-                  justify-content: flex-start;
-                  align-items: flex-end;
-                  gap: 8px;
-
-                  .current-price {
-                    color: #D86FFF;
-                    font-family: $primary-font-family;
-                    font-size: 28px;
-                    font-style: normal;
-                    font-weight: 500;
-                    font-feature-settings: 'calt' off;
-                    line-height: 1em;
-                    letter-spacing: -0.28px;
-
-                    @media only screen and (max-width: 480px) {
-                      font-size: 15px;
-                    }
-                  }
-
-                  .before-price {
-                    color: #787878;
-                    font-family: $primary-font-family;
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: 300;
-                    font-feature-settings: 'calt' off;
-                    text-decoration: line-through;
-                    line-height: 1em;
-                    letter-spacing: -0.16px;
-
-                    @media only screen and (max-width: 480px) {
-                      font-size: 9px;
-                    }
-                  }
-                }
-              }
-
-              .product-actions {
-                position: absolute;
-                z-index: 2;
-                bottom: 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 16px;
-                visibility: hidden;
-                opacity: 0;
-                width: 100%;
-                height: 60px;
-                transition:
-                  opacity $hover-transition-duration ease-in-out 0ms;
-                
-                @media only screen and (max-width: 768px) {
+                .product-details {
                   position: relative;
-                  bottom: unset;
+                  z-index: 1;
                   visibility: visible;
                   opacity: 1;
-                }
-
-                @media only screen and (max-width: 480px) {
-                  height: 26px;
-                }
-
-                .db-btn--buy-it-now {
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  background-color: $secondary-color;
-                  max-width: 235px;
-                  width: 100%;
-                  padding: 17px 22px;
-                  border-radius: 50px;
-                  border: 1px solid $secondary-color;
+                  height: 60px;
                   transition:
-                    all $hover-transition-duration ease-in-out 0ms;
+                    opacity $hover-transition-duration ease-in-out 0ms;
 
                   @media only screen and (max-width: 768px) {
-                    max-width: 100%;
+                    height: auto;
+                    margin: 0 auto 16px;
                   }
 
                   @media only screen and (max-width: 480px) {
-                    padding: 7px 12px;
+                    margin-bottom: 7px;
                   }
 
-                  .label {
+                  .product-title {
                     color: $white-color;
                     font-family: $primary-font-family;
-                    font-size: 18px;
+                    font-size: 20px;
                     font-style: normal;
-                    font-weight: 700;
+                    font-weight: 500;
                     line-height: 1.25em;
-                    white-space: nowrap;
-                    display: block;
-                    transition:
-                      all $hover-transition-duration ease-in-out 0ms;
-
-                    @media only screen and (max-width: 768px) {
-                      font-size: 14px;
-                    }
+                    margin-bottom: 8px;
 
                     @media only screen and (max-width: 480px) {
-                      font-size: 8px;
+                      font-size: 10px;
+                      margin-bottom: 5px;
                     }
                   }
 
-                  &:hover {
-                    background-color: transparent;
+                  .product-price {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: flex-end;
+                    gap: 8px;
 
-                    .label {
-                      color: $secondary-color;
+                    .current-price {
+                      color: #D86FFF;
+                      font-family: $primary-font-family;
+                      font-size: 28px;
+                      font-style: normal;
+                      font-weight: 500;
+                      font-feature-settings: 'calt' off;
+                      line-height: 1em;
+                      letter-spacing: -0.28px;
+
+                      @media only screen and (max-width: 480px) {
+                        font-size: 15px;
+                      }
                     }
-                  }
-                }
 
-                .db-btn--add-to-cart {
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  background-color: transparent;
-                  max-width: 56px;
-                  min-width: 56px;
-                  width: 100%;
-                  height: 56px;
-                  border: 1px solid $primary-color;
-                  border-radius: 50px;
+                    .before-price {
+                      color: #787878;
+                      font-family: $primary-font-family;
+                      font-size: 16px;
+                      font-style: normal;
+                      font-weight: 300;
+                      font-feature-settings: 'calt' off;
+                      text-decoration: line-through;
+                      line-height: 1em;
+                      letter-spacing: -0.16px;
 
-                  @media only screen and (max-width: 480px) {
-                    max-width: 26px;
-                    min-width: 26px;
-                    height: 26px;
-                  }
-
-                  .svg-icon-cart {
-                    max-width: 20px;
-                    min-width: 20px;
-                    width: 100%;
-
-                    @media only screen and (max-width: 480px) {
-                      max-width: 10px;
-                      min-width: 10px;
+                      @media only screen and (max-width: 480px) {
+                        font-size: 9px;
+                      }
                     }
-                  }
-
-                  &:hover {
-                    background-color: $primary-color;
-                  }
-                }
-              }
-
-              &.--fade-in {
-                opacity: 1;
-                transition:
-                  opacity 500ms ease-in-out 0ms;
-              }
-
-              &:hover {
-                .product-details {
-                  visibility: hidden;
-                  opacity: 0;
-
-                  @media only screen and (max-width: 768px) {
-                    visibility: visible;
-                    opacity: 1;
                   }
                 }
 
                 .product-actions {
-                  visibility: visible;
+                  position: absolute;
+                  z-index: 2;
+                  bottom: 0;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  gap: 16px;
+                  visibility: hidden;
+                  opacity: 0;
+                  width: 100%;
+                  height: 60px;
+                  transition:
+                    opacity $hover-transition-duration ease-in-out 0ms;
+                  
+                  @media only screen and (max-width: 768px) {
+                    position: relative;
+                    bottom: unset;
+                    visibility: visible;
+                    opacity: 1;
+                  }
+
+                  @media only screen and (max-width: 480px) {
+                    height: 26px;
+                  }
+
+                  .db-btn--buy-it-now {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: $secondary-color;
+                    max-width: 235px;
+                    width: 100%;
+                    padding: 17px 22px;
+                    border-radius: 50px;
+                    border: 1px solid $secondary-color;
+                    transition:
+                      all $hover-transition-duration ease-in-out 0ms;
+
+                    @media only screen and (max-width: 768px) {
+                      max-width: 100%;
+                    }
+
+                    @media only screen and (max-width: 480px) {
+                      padding: 7px 12px;
+                    }
+
+                    .label {
+                      color: $white-color;
+                      font-family: $primary-font-family;
+                      font-size: 18px;
+                      font-style: normal;
+                      font-weight: 700;
+                      line-height: 1.25em;
+                      white-space: nowrap;
+                      display: block;
+                      transition:
+                        all $hover-transition-duration ease-in-out 0ms;
+
+                      @media only screen and (max-width: 768px) {
+                        font-size: 14px;
+                      }
+
+                      @media only screen and (max-width: 480px) {
+                        font-size: 8px;
+                      }
+                    }
+
+                    &:hover {
+                      background-color: transparent;
+
+                      .label {
+                        color: $secondary-color;
+                      }
+                    }
+                  }
+
+                  .db-btn--add-to-cart {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: transparent;
+                    max-width: 56px;
+                    min-width: 56px;
+                    width: 100%;
+                    height: 56px;
+                    border: 1px solid $primary-color;
+                    border-radius: 50px;
+
+                    @media only screen and (max-width: 480px) {
+                      max-width: 26px;
+                      min-width: 26px;
+                      height: 26px;
+                    }
+
+                    .svg-icon-cart {
+                      max-width: 20px;
+                      min-width: 20px;
+                      width: 100%;
+
+                      @media only screen and (max-width: 480px) {
+                        max-width: 10px;
+                        min-width: 10px;
+                      }
+                    }
+
+                    &:hover {
+                      background-color: $primary-color;
+                    }
+                  }
+                }
+
+                &.--fade-in {
                   opacity: 1;
+                  transition:
+                    opacity 500ms ease-in-out 0ms;
+                }
+
+                &:hover {
+                  .product-details {
+                    visibility: hidden;
+                    opacity: 0;
+
+                    @media only screen and (max-width: 768px) {
+                      visibility: visible;
+                      opacity: 1;
+                    }
+                  }
+
+                  .product-actions {
+                    visibility: visible;
+                    opacity: 1;
+                  }
                 }
               }
             }
-          }
 
-          .product-pagination {
-            width: max-content;
-            margin: 0 0 0 auto;
+            .product-pagination {
+              width: max-content;
+              margin: 0 0 0 auto;
 
-            @media only screen and (max-width: 768px) {
-              margin: 0 auto;
+              @media only screen and (max-width: 768px) {
+                margin: 0 auto;
+              }
             }
           }
         }
