--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -23,3 +23,4 @@
 @import './db-theme/pages/page--privacy-policy';
 @import './db-theme/pages/page--terms-of-use';
 @import './db-theme/pages/page--merch-store';
+@import './db-theme/pages/page--product';
