--- a/styles/db-theme/components/_cart.scss
+++ b/styles/db-theme/components/_cart.scss
@@ -155,49 +155,52 @@
                 font-size: 10px;
                 margin-bottom: 10px;
               }
+
+              &:hover {
+                color: $primary-color;
+              }
             }
 
             .product-variant {
               display: flex;
+              flex-wrap: wrap;
               justify-content: space-between;
               align-items: center;
+              gap: 4px;
 
               @media only screen and (max-width: 480px) {
                 flex-direction: column;
                 align-items: flex-start;
-                gap: 4px;
               }
               
               .option {
+                display: flex;
+                justify-content: flex-start;
+                align-items: flex-start;
+                gap: 3px;
                 width: max-content;
 
-                div {
-                  display: flex;
-                  justify-content: flex-start;
-                  align-items: center;
-                  gap: 3px;
+                span {
+                  font-family: $secondary-font-family;
+                  font-size: 12px;
+                  font-style: normal;
+                  text-transform: uppercase;
+                  line-height: 1.15em;
+                  letter-spacing: -0.6px;
+                  white-space: nowrap;
 
-                  span {
-                    font-family: $secondary-font-family;
-                    font-size: 12px;
-                    font-style: normal;
-                    text-transform: uppercase;
-                    line-height: 1.15em;
-                    letter-spacing: -0.6px;
+                  @media only screen and (max-width: 768px) {
+                    font-size: 9px;
+                  }
 
-                    @media only screen and (max-width: 768px) {
-                      font-size: 9px;
-                    }
+                  &.name {
+                    color: #ABAFB2;
+                    font-weight: 400;
+                  }
 
-                    &.name {
-                      color: #ABAFB2;
-                      font-weight: 400;
-                    }
-
-                    &.value {
-                      color: $white-color;
-                      font-weight: 700;
-                    }
+                  &.value {
+                    color: $white-color;
+                    font-weight: 700;
                   }
                 }
               }
