--- a/styles/db-theme/pages/_page--product.scss
+++ b/styles/db-theme/pages/_page--product.scss
@@ -108,132 +108,178 @@
               border-top: 1px solid rgba(255, 255, 255, 0.40);
 
               &.--color {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                gap: 16px;
-                padding: 32px 0;
+                position: relative;
 
-                .label {
-                  color: $white-color;
-                  font-family: $secondary-font-family;
-                  font-size: 18px;
-                  font-style: normal;
-                  font-weight: 700;
-                  font-feature-settings: 'calt' off;
-                  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
-                  line-height: 1em;
-                  letter-spacing: -0.36px;
-                }
-
-                .option-list {
+                .db-inner-row {
                   display: flex;
-                  justify-content: center;
-                  align-items: stretch;
-                  gap: 11px;
+                  justify-content: space-between;
+                  align-items: flex-start;
+                  gap: 16px;
+                  width: 100%;
+                  padding: 32px 0;
 
-                  .option-item {
-                    display: block;
-                    max-width: 80px;
-                    min-width: 80px;
+                  .label {
+                    color: $white-color;
+                    font-family: $secondary-font-family;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 700;
+                    font-feature-settings: 'calt' off;
+                    text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                    line-height: 1em;
+                    letter-spacing: -0.36px;
+                  }
+
+                  .option-list {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: flex-start;
+                    align-items: stretch;
+                    gap: 11px;
+                    max-width: 270px;
                     width: 100%;
-                    height: 26px;
-                    border: 2px solid $black-color;
-                    border-radius: 3px;
-                    cursor: pointer;
 
-                    // &:nth-child(1) {
-                    //   background-color: #201E20;
-                    //   box-shadow: 0px 0px 0px 2px #201E20;
-                    // }
+                    .option-item {
+                      display: block;
+                      max-width: 80px;
+                      min-width: 80px;
+                      width: 100%;
+                      height: 26px;
+                      border: 2px solid $black-color;
+                      border-radius: 3px;
+                      cursor: pointer;
 
-                    // &:nth-child(2) {
-                    //   background-color: #582E5D;
-                    //   box-shadow: 0px 0px 0px 2px #582E5D;
-                    // }
+                      &.--selected {}
+                    }
                   }
                 }
               }
 
               &.--size {
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-                gap: 47px;
-                padding: 32px 0;
+                .db-inner-row {
+                  display: flex;
+                  justify-content: flex-start;
+                  align-items: center;
+                  gap: 47px;
+                  width: 100%;
+                  padding: 32px 0;
 
-                > .label {
-                  color: $white-color;
-                  font-family: $secondary-font-family;
-                  font-size: 18px;
-                  font-style: normal;
-                  font-weight: 700;
-                  font-feature-settings: 'calt' off;
-                  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
-                  line-height: 1em;
-                  letter-spacing: -0.36px;
-                }
-
-                .db-btn--size-guide {
-                  display: block;
-
-                  .label {
+                  > .label {
                     color: $white-color;
-                    font-family: $primary-font-family;
-                    font-size: 16px;
+                    font-family: $secondary-font-family;
+                    font-size: 18px;
                     font-style: normal;
                     font-weight: 700;
                     font-feature-settings: 'calt' off;
-                    text-transform: uppercase;
-                    text-decoration: underline;
+                    text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
                     line-height: 1em;
-                    transition:
-                      color $hover-transition-duration ease-in-out 0ms;
+                    letter-spacing: -0.36px;
                   }
 
-                  &:hover {
+                  .db-btn--size-guide {
+                    display: block;
+
                     .label {
-                      color: #D86FFF;
+                      color: $white-color;
+                      font-family: $primary-font-family;
+                      font-size: 16px;
+                      font-style: normal;
+                      font-weight: 700;
+                      font-feature-settings: 'calt' off;
+                      text-transform: uppercase;
+                      text-decoration: underline;
+                      line-height: 1em;
+                      transition:
+                        color $hover-transition-duration ease-in-out 0ms;
+                    }
+
+                    &.--toggled {
+                      .label {
+                        color: #D86FFF;
+                      }
+                    }
+
+                    &:hover {
+                      .label {
+                        color: #D86FFF;
+                      }
+                    }
+                  }
+
+                  .option-list {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 3px;
+                    width: max-content;
+                    margin: 0 0 0 auto;
+
+                    .option-item {
+                      color: $white-color;
+                      font-family: $secondary-font-family;
+                      font-size: 14px;
+                      font-style: normal;
+                      font-weight: 700;
+                      font-feature-settings: 'calt' off;
+                      text-align: center;
+                      line-height: 1em;
+                      letter-spacing: -0.28px;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      min-width: 34px;
+                      width: 100%;
+                      height: 34px;
+                      padding: 0 10px;
+                      border: 1px solid transparent;
+                      border-radius: 5px;
+                      transition:
+                        color $hover-transition-duration ease-in-out 0ms,
+                        border-color $hover-transition-duration ease-in-out 0ms;
+                      cursor: pointer;
+
+                      &.--selected,
+                      &:hover {
+                        color: #D86FFF;
+                        border-color: #D86FFF;
+                      }
                     }
                   }
                 }
 
-                .option-list {
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  gap: 3px;
-                  width: max-content;
-                  margin: 0 0 0 auto;
+                .product-size-guide-wrap {
+                  width: 100%;
+                  height: 0px;
+                  overflow: hidden;
+                  transition:
+                    height $click-transition-duration ease-in-out 0ms;
 
-                  .option-item {
-                    color: $white-color;
-                    font-family: $secondary-font-family;
-                    font-size: 14px;
-                    font-style: normal;
-                    font-weight: 700;
-                    font-feature-settings: 'calt' off;
-                    text-align: center;
-                    line-height: 1em;
-                    letter-spacing: -0.28px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    max-width: 34px;
-                    min-width: 34px;
+                  table {
+                    border-collapse: collapse;
                     width: 100%;
-                    height: 34px;
-                    border: 1px solid transparent;
-                    border-radius: 5px;
-                    transition:
-                      color $hover-transition-duration ease-in-out 0ms,
-                      border-color $hover-transition-duration ease-in-out 0ms;
-                    cursor: pointer;
+                    margin: 25px 0;
 
-                    &.--selected,
-                    &:hover {
-                      color: #D86FFF;
-                      border-color: #D86FFF;
+                    tr {
+                      td {
+                        color: $white-color;
+                        font-family: $secondary-font-family;
+                        font-size: 18px;
+                        font-style: normal;
+                        font-weight: 700;
+                        font-feature-settings: 'calt' off;
+                        text-align: center;
+                        text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                        line-height: 1.25em;
+                        letter-spacing: -0.36px;
+                        white-space: nowrap;
+                        padding: 14px;
+                        vertical-align: middle;
+                        border: 1px solid rgba(255, 255, 255, 0.40);
+
+                        &:nth-child(1) {
+                          
+                        }
+                      }
                     }
                   }
                 }
@@ -368,7 +414,7 @@
                 margin-bottom: 24px;
               }
 
-              p {
+              div {
                 color: #CAC7D0;
                 font-family: $secondary-font-family;
                 font-size: 18px;
